# husky_quest

./: .gitignore  README.md
cimatec_map/model/senai_cimatec/: model.sdf
cimatec_map/world/: cimatec.world
custom_config/: CMakeLists.txt
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: custom_config.pc  custom_husky.pc  navi.pc  pointcloud_to_laserscan2.pc  quaternion_euler.pc  velodyne_description.pc  xjoy.pc
devel/lib/pointcloud_to_laserscan2/: laserscan_to_pointcloud_node  pointcloud_to_laserscan_node
devel/lib/quaternion_euler/: quaternion_euler
devel/share/custom_config/cmake/: custom_configConfig.cmake
devel/share/custom_husky/cmake/: custom_huskyConfig.cmake
navi/: CMakeLists.txt
navi/launch/: leolaunch.launch  move_base.launch  nav2d.launch
navi/scripts/: leomission.py
pointcloud_to_laserscan2/: package.xml
src/cimatec_map/launch/: huskyplus.launch  rviz.launch
src/custom_config/: package.xml
src/custom_config/config/: planner.yaml
src/custom_husky/: CMakeLists.txt  package.xml
src/custom_husky/urdf/: custom_description.xacro
src/navi/launch/: aloam_for_mapping.launch  gmapping.launch
src/navi/param/: costmap.yaml  navigator.yaml
src/navi/rviz_cfg/: navi.rviz
src/navi/scripts/: camera.py  control_vision.py  example_objectDetection.py
src/pointcloud_to_laserscan2/: CMakeLists.txt
src/pointcloud_to_laserscan2/src/: pointcloud_to_laserscan_nodelet.cpp
src/xjoy/: CMakeLists.txt
velodyne_description/meshes/: Full_VLP-16.stl
velodyne_description/urdf/: VLP-16.urdf.xacro
(+5 files in other folders)
