<?xml version="1.0"?>
<package format="2">
  <name>custom_husky</name>
  <version>0.0.0</version>
  <description>Custom Husky (adds a Velodyne support)</description>

  <maintainer email="aziel.freitas@fbter.org.br">Aziel Freitas</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  <build_export_depend>gazebo</build_export_depend>
  <exec_depend>gazebo</exec_depend>

  <export>

  </export>
</package>
